--- a/www.nass.gov.ng/1b7d16e778e730dd5c77aaf603cf1029fe089e46.yml
+++ b/www.nass.gov.ng/1b7d16e778e730dd5c77aaf603cf1029fe089e46.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:52:36 GMT
+    - Sat, 24 Jun 2017 01:54:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VaIBy-dbBKZ8oK-wvdM5b1; path=/
+    - PHPSESSID=HLbW8OPj%2C3SXGH5ONPbKS1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:52:36 GMT
+recorded_at: Sat, 24 Jun 2017 01:54:39 GMT
