--- a/www.nass.gov.ng/61403ede59b503837da9e97dd9175d70ed9730af.yml
+++ b/www.nass.gov.ng/61403ede59b503837da9e97dd9175d70ed9730af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:54:59 GMT
+    - Sat, 24 Jun 2017 01:57:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OYTIurCVUxC4SIhYrhged2; path=/
+    - PHPSESSID=%2CLg%2C7r2NJDUdQDJtvlmQF3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:54:59 GMT
+recorded_at: Sat, 24 Jun 2017 01:57:14 GMT
