--- a/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
+++ b/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:56:35 GMT
+    - Sat, 24 Jun 2017 01:59:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QtHv7CPwvAXNXfOGp09xS0; path=/
+    - PHPSESSID=3i8IpUXH%2CZAROru7jzH4V3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:56:35 GMT
+recorded_at: Sat, 24 Jun 2017 01:59:15 GMT
