--- a/www.nass.gov.ng/57d222152199bf7226447ae08bf07ab540c70007.yml
+++ b/www.nass.gov.ng/57d222152199bf7226447ae08bf07ab540c70007.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 23:07:56 GMT
+    - Sat, 24 Jun 2017 02:10:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4DHx31c-3m%2Cr4urb00Irg0; path=/
+    - PHPSESSID=yCmTUh1C19z1hFL2-bzoy3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 23:07:56 GMT
+recorded_at: Sat, 24 Jun 2017 02:10:31 GMT
