--- a/www.nass.gov.ng/29b4b050c51516c193b7fc2b61004574c2c786b4.yml
+++ b/www.nass.gov.ng/29b4b050c51516c193b7fc2b61004574c2c786b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 23:15:58 GMT
+    - Sat, 24 Jun 2017 02:15:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xMHRf6bAcUR3sI3zX425D0; path=/
+    - PHPSESSID=%2C6SFjZP0IxErG8Fa3dDex3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 23:15:58 GMT
+recorded_at: Sat, 24 Jun 2017 02:15:38 GMT
