--- a/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
+++ b/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 23:21:09 GMT
+    - Sat, 24 Jun 2017 02:19:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jOcPN0gZtFcj41caVli%2CK2; path=/
+    - PHPSESSID=FjKjlpse%2CL7Wmcv2SVxgE0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 23:21:09 GMT
+recorded_at: Sat, 24 Jun 2017 02:19:51 GMT
