--- a/www.nass.gov.ng/5f323ad04f9c82e9bd541497c5457b92f01e053f.yml
+++ b/www.nass.gov.ng/5f323ad04f9c82e9bd541497c5457b92f01e053f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 23:22:01 GMT
+    - Sat, 24 Jun 2017 02:22:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hf1jx1L25svEZokJ%2CtYKX1; path=/
+    - PHPSESSID=hhZwU1SZmqNIK5XaMr-kx0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 23:22:01 GMT
+recorded_at: Sat, 24 Jun 2017 02:22:10 GMT
