--- a/www.nass.gov.ng/ac53673c4d4734657fd2cdb0f447c9ef7d43ac56.yml
+++ b/www.nass.gov.ng/ac53673c4d4734657fd2cdb0f447c9ef7d43ac56.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 23:23:52 GMT
+    - Sat, 24 Jun 2017 02:23:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mN%2CxS52LbBTzeGLuXXfuA0; path=/
+    - PHPSESSID=3Q%2CT86FlodjKb5jZl34gJ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 23:23:52 GMT
+recorded_at: Sat, 24 Jun 2017 02:23:22 GMT
