--- a/www.nass.gov.ng/9adc49d36b938c5d8890be9680ab3d62c71bf5dd.yml
+++ b/www.nass.gov.ng/9adc49d36b938c5d8890be9680ab3d62c71bf5dd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 23:25:32 GMT
+    - Sat, 24 Jun 2017 02:24:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B-Q6uvakXzWX8Mbw3er8J1; path=/
+    - PHPSESSID=IzHLoAQIe2MMukB%2CAEpI30; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 23:25:32 GMT
+recorded_at: Sat, 24 Jun 2017 02:24:14 GMT
