--- a/www.nass.gov.ng/cf0c436d2603f814e7561d5fff256a2295b249af.yml
+++ b/www.nass.gov.ng/cf0c436d2603f814e7561d5fff256a2295b249af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 23:26:07 GMT
+    - Sat, 24 Jun 2017 02:25:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BurOVRsujAKiUUcS-p0hX3; path=/
+    - PHPSESSID=%2Ch9zszgItTBurZp8kME-W2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 23:26:07 GMT
+recorded_at: Sat, 24 Jun 2017 02:25:12 GMT
