--- a/www.nass.gov.ng/3d86c741544627747d8b842090765232f9684ecb.yml
+++ b/www.nass.gov.ng/3d86c741544627747d8b842090765232f9684ecb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 21:43:07 GMT
+    - Sat, 24 Jun 2017 02:58:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=d0wjRShimIOJUCSQV5dpF2; path=/
+    - PHPSESSID=OQkFNZpE2w%2CsAlQP9YOTk2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 21:43:07 GMT
+recorded_at: Sat, 24 Jun 2017 02:58:01 GMT
