--- a/www.nass.gov.ng/916445dde68b4dd165e955b1aec29b5e8b7b1d63.yml
+++ b/www.nass.gov.ng/916445dde68b4dd165e955b1aec29b5e8b7b1d63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 21:56:18 GMT
+    - Sat, 24 Jun 2017 03:09:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=c2wIZ9lPpZHaCQ9xkDmMW0; path=/
+    - PHPSESSID=%2C2-H2PJJlnnoD48zpYhFO1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 21:56:18 GMT
+recorded_at: Sat, 24 Jun 2017 03:09:19 GMT
