--- a/www.nass.gov.ng/d6e9316c52882b39e14c601a30fdd03e08b4c0eb.yml
+++ b/www.nass.gov.ng/d6e9316c52882b39e14c601a30fdd03e08b4c0eb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 21:59:54 GMT
+    - Sat, 24 Jun 2017 03:13:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UFLLuv2sr5wDSoBll4v5H0; path=/
+    - PHPSESSID=5cMjJkEe2P8LNgd%2C5cKZy1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 21:59:54 GMT
+recorded_at: Sat, 24 Jun 2017 03:13:46 GMT
