--- a/www.nass.gov.ng/11399bf89975f536eabf6e3b1865080e3f229eeb.yml
+++ b/www.nass.gov.ng/11399bf89975f536eabf6e3b1865080e3f229eeb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:03:30 GMT
+    - Sat, 24 Jun 2017 03:18:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C4Vl0-rJcw8hPRbgRZlRh3; path=/
+    - PHPSESSID=kBaFhvwPom00fTp3A9Bp-0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:03:30 GMT
+recorded_at: Sat, 24 Jun 2017 03:18:21 GMT
