--- a/www.nass.gov.ng/b9b1ec024f64b423a04d4bed6b6f279666b010fb.yml
+++ b/www.nass.gov.ng/b9b1ec024f64b423a04d4bed6b6f279666b010fb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:06:58 GMT
+    - Sat, 24 Jun 2017 03:22:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nuwmGq%2ChO4rqxA5v0tM5%2C0; path=/
+    - PHPSESSID=e4hqPxaNWrBz0x37yg0fC0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:06:58 GMT
+recorded_at: Sat, 24 Jun 2017 03:22:43 GMT
