--- a/www.nass.gov.ng/0a621bb6220ac12999a22d2841e4137d56dfd87e.yml
+++ b/www.nass.gov.ng/0a621bb6220ac12999a22d2841e4137d56dfd87e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:13:15 GMT
+    - Sat, 24 Jun 2017 03:28:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=j4batgAL%2C5dH2um1PfKhd3; path=/
+    - PHPSESSID=Y4SiYzHjPR8UfsC17aQN60; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:13:15 GMT
+recorded_at: Sat, 24 Jun 2017 03:28:17 GMT
