--- a/www.nass.gov.ng/0e4f619efb60821b689e0080d92a64319bc46214.yml
+++ b/www.nass.gov.ng/0e4f619efb60821b689e0080d92a64319bc46214.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:13:52 GMT
+    - Sat, 24 Jun 2017 03:29:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1UGROBhDlozrmDP3%2CP3PN2; path=/
+    - PHPSESSID=FLGyaeKrMexy5SQK6I0kw3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:13:52 GMT
+recorded_at: Sat, 24 Jun 2017 03:29:04 GMT
