--- a/www.nass.gov.ng/48fd4be53b69f8057146838684af4f78cdd5c9f0.yml
+++ b/www.nass.gov.ng/48fd4be53b69f8057146838684af4f78cdd5c9f0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:16:35 GMT
+    - Sat, 24 Jun 2017 03:31:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Su%2Cz5ttd6-1TOWSboQaHq2; path=/
+    - PHPSESSID=swla8-nhrVw9WId44KEL73; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:16:35 GMT
+recorded_at: Sat, 24 Jun 2017 03:31:25 GMT
