--- a/www.nass.gov.ng/eee6365742b7b49e38021b714a001e28d1311f24.yml
+++ b/www.nass.gov.ng/eee6365742b7b49e38021b714a001e28d1311f24.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:21:03 GMT
+    - Sat, 24 Jun 2017 03:37:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=C9Yzpbzh39YQAeoKr0qi%2C3; path=/
+    - PHPSESSID=gVhlK%2CK33sh70GNEqBSX22; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:21:03 GMT
+recorded_at: Sat, 24 Jun 2017 03:37:59 GMT
