--- a/www.nass.gov.ng/02fea35a6d0d15cf1d8b84174bfa1e38391573da.yml
+++ b/www.nass.gov.ng/02fea35a6d0d15cf1d8b84174bfa1e38391573da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:21:23 GMT
+    - Sat, 24 Jun 2017 03:38:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jqlRSiqsq3qRilhYma3%2C42; path=/
+    - PHPSESSID=PY%2CLn7%2CjEovN5IoIbB9El2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:21:23 GMT
+recorded_at: Sat, 24 Jun 2017 03:38:25 GMT
