--- a/www.nass.gov.ng/8963db36243ad69fab651a024c206e2570e97b00.yml
+++ b/www.nass.gov.ng/8963db36243ad69fab651a024c206e2570e97b00.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:30:02 GMT
+    - Sat, 24 Jun 2017 03:45:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TUIF3sc4kq34rN8L3YVm71; path=/
+    - PHPSESSID=2g26ulHNSjAeR%2Cvz5ogF61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:30:02 GMT
+recorded_at: Sat, 24 Jun 2017 03:45:14 GMT
