--- a/www.nass.gov.ng/8e1a902c867aec594f3d64350954a9970a282b32.yml
+++ b/www.nass.gov.ng/8e1a902c867aec594f3d64350954a9970a282b32.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:31:16 GMT
+    - Sat, 24 Jun 2017 03:47:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CPqd1IObxC0P2XcWmCy7b2; path=/
+    - PHPSESSID=J9WZNFRzSDRsaI%2CYCHL8P2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:31:16 GMT
+recorded_at: Sat, 24 Jun 2017 03:47:18 GMT
