--- a/www.nass.gov.ng/3ad61656bc5eac3180a0c107db2488da3c186679.yml
+++ b/www.nass.gov.ng/3ad61656bc5eac3180a0c107db2488da3c186679.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:32:48 GMT
+    - Sat, 24 Jun 2017 03:49:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=915P9lGt6l90GW1cWqEa%2C2; path=/
+    - PHPSESSID=ZZHD9QMp8p1Yf9TdfBs5I3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:32:48 GMT
+recorded_at: Sat, 24 Jun 2017 03:49:13 GMT
