--- a/www.nass.gov.ng/13d6240a05ee47b606818b0b27aa4075f51c6efa.yml
+++ b/www.nass.gov.ng/13d6240a05ee47b606818b0b27aa4075f51c6efa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:35:03 GMT
+    - Sat, 24 Jun 2017 03:50:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=l1dRLsIiu%2CPrnV58SooZt2; path=/
+    - PHPSESSID=4eejXN9MnwXgCjl9A%2CBom1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:35:03 GMT
+recorded_at: Sat, 24 Jun 2017 03:50:23 GMT
