--- a/www.nass.gov.ng/5f7e182f93236398013f1906aab476a60bc043c1.yml
+++ b/www.nass.gov.ng/5f7e182f93236398013f1906aab476a60bc043c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:38:19 GMT
+    - Sat, 24 Jun 2017 03:55:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7DmxSwrnOdJQ78W01bUZR0; path=/
+    - PHPSESSID=TXWkpNIboQ%2CjqiU%2CRIugx2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:38:19 GMT
+recorded_at: Sat, 24 Jun 2017 03:55:21 GMT
