--- a/www.nass.gov.ng/a9d208d68bb819f8815e44f040bc9c47533ebe89.yml
+++ b/www.nass.gov.ng/a9d208d68bb819f8815e44f040bc9c47533ebe89.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:39:38 GMT
+    - Sat, 24 Jun 2017 03:56:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vQYHV09CkgeLETM-SuH3w2; path=/
+    - PHPSESSID=%2CdoPJ67Lo%2C2sl7RNZhmX61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:39:39 GMT
+recorded_at: Sat, 24 Jun 2017 03:56:32 GMT
