--- a/www.nass.gov.ng/6965475315e169db13a0e880ae64285c08f7a666.yml
+++ b/www.nass.gov.ng/6965475315e169db13a0e880ae64285c08f7a666.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:39:57 GMT
+    - Sat, 24 Jun 2017 03:57:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m3J3iUsbYZ5rIlA5lke%2Cx2; path=/
+    - PHPSESSID=iJeJmxATOJRe%2CBXV3O0eG2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:39:57 GMT
+recorded_at: Sat, 24 Jun 2017 03:57:17 GMT
