--- a/www.nass.gov.ng/234f08d83d3c8e829df23133fd90014612339a2f.yml
+++ b/www.nass.gov.ng/234f08d83d3c8e829df23133fd90014612339a2f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:43:48 GMT
+    - Sat, 24 Jun 2017 04:00:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1dbpeRRCw%2C5l1Kc-JUb%2Cd0; path=/
+    - PHPSESSID=zCPYcFE%2C2y0v-KsVyjqpn2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:43:48 GMT
+recorded_at: Sat, 24 Jun 2017 04:00:15 GMT
