--- a/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
+++ b/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:45:16 GMT
+    - Sat, 24 Jun 2017 04:01:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CKElbjYfsAs0tqtQTBA4c0; path=/
+    - PHPSESSID=C3y59xCzG3%2CE1xu-ro7WI2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:45:16 GMT
+recorded_at: Sat, 24 Jun 2017 04:01:41 GMT
