--- a/www.nass.gov.ng/69a48311a7cfba996bf1a3951c9eb4e4ea4e481f.yml
+++ b/www.nass.gov.ng/69a48311a7cfba996bf1a3951c9eb4e4ea4e481f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:49:18 GMT
+    - Sat, 24 Jun 2017 04:04:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CLwiMrLO7DTIqNRzcYqLv1; path=/
+    - PHPSESSID=l-8MGPnA06OO5Xk0hZPWb2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:49:18 GMT
+recorded_at: Sat, 24 Jun 2017 04:04:44 GMT
