--- a/www.nass.gov.ng/c9a42970e8edc4178f65bad2db5771c46367a2c7.yml
+++ b/www.nass.gov.ng/c9a42970e8edc4178f65bad2db5771c46367a2c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:50:56 GMT
+    - Sat, 24 Jun 2017 04:06:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ushl7uw4YSNL52N0UKKQY0; path=/
+    - PHPSESSID=age%2Cl3zj7iFW25TPpxwpQ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:50:56 GMT
+recorded_at: Sat, 24 Jun 2017 04:06:38 GMT
