--- a/www.nass.gov.ng/c70744f94a2418107107f5853085bc0762554320.yml
+++ b/www.nass.gov.ng/c70744f94a2418107107f5853085bc0762554320.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:51:32 GMT
+    - Sat, 24 Jun 2017 04:07:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tcK5N%2C1l3XQGUMqmtHnC21; path=/
+    - PHPSESSID=FEpb0a2o25aZ8nbSR1JLM3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:51:32 GMT
+recorded_at: Sat, 24 Jun 2017 04:07:02 GMT
