--- a/www.nass.gov.ng/91f62b1760551589ced48cc5222b29ada57e2997.yml
+++ b/www.nass.gov.ng/91f62b1760551589ced48cc5222b29ada57e2997.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:51:50 GMT
+    - Sat, 24 Jun 2017 04:07:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GxmaAtnITuBhtzgTuL-sQ1; path=/
+    - PHPSESSID=7O2SuY%2CET6WajLjZ3yytQ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:51:50 GMT
+recorded_at: Sat, 24 Jun 2017 04:07:49 GMT
