--- a/www.nass.gov.ng/70ad86e9f44c15d1f096c47097bee16f9af54608.yml
+++ b/www.nass.gov.ng/70ad86e9f44c15d1f096c47097bee16f9af54608.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:54:38 GMT
+    - Sat, 24 Jun 2017 04:10:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UTusWnwv2CJ%2CM2-PkaaVr1; path=/
+    - PHPSESSID=jcgBlsSk8K9oUQs8GomUm2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:54:38 GMT
+recorded_at: Sat, 24 Jun 2017 04:10:56 GMT
