--- a/www.nass.gov.ng/f19366f7fb5112efeee244b98da420d87ddd7414.yml
+++ b/www.nass.gov.ng/f19366f7fb5112efeee244b98da420d87ddd7414.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:57:14 GMT
+    - Sat, 24 Jun 2017 04:12:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DrmyK4EdzaAFZRHarxDIn3; path=/
+    - PHPSESSID=%2C-RigB5hwG6Y1X9tYid1l1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:57:14 GMT
+recorded_at: Sat, 24 Jun 2017 04:12:56 GMT
