--- a/www.nass.gov.ng/20cbeb332c3a9e941fa40fd2f16a7cf30d5a218b.yml
+++ b/www.nass.gov.ng/20cbeb332c3a9e941fa40fd2f16a7cf30d5a218b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:58:13 GMT
+    - Sat, 24 Jun 2017 04:13:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7BVMaGy8IfjNLP%2CCK8lX-3; path=/
+    - PHPSESSID=--y0ocXV2T1YFFDpL06iN1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:58:13 GMT
+recorded_at: Sat, 24 Jun 2017 04:13:22 GMT
