--- a/www.nass.gov.ng/682f5b1270d522b821f26c13476fbddd817f85bc.yml
+++ b/www.nass.gov.ng/682f5b1270d522b821f26c13476fbddd817f85bc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 22:59:17 GMT
+    - Sat, 24 Jun 2017 04:14:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NPZ%2C8zQ1VBGFlgNxxqEd51; path=/
+    - PHPSESSID=eZHYEeTwhxy6jncOqSvf61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 22:59:17 GMT
+recorded_at: Sat, 24 Jun 2017 04:14:24 GMT
