--- a/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
+++ b/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:03:13 GMT
+    - Sat, 24 Jun 2017 04:19:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EGOa7YAbDWTwH7B9f7geK2; path=/
+    - PHPSESSID=rJX%2CdHx2-nsfARmojygWE0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:03:13 GMT
+recorded_at: Sat, 24 Jun 2017 04:19:30 GMT
