--- a/www.nass.gov.ng/45ae3d777fa62a9816a5a152dff6fd58c3640b4b.yml
+++ b/www.nass.gov.ng/45ae3d777fa62a9816a5a152dff6fd58c3640b4b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:09:23 GMT
+    - Sat, 24 Jun 2017 04:27:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TYoGiYADjGVuVxZ45MgFO1; path=/
+    - PHPSESSID=TfqMQ-XypQZMjGNIS%2Ceiv1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:09:23 GMT
+recorded_at: Sat, 24 Jun 2017 04:27:20 GMT
